--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+  Maritime Terrain Visualization
+  Main HTML entry point for the application.
+  Sets up the root container and loads the React app.
+-->
 <!doctype html>
 <html lang="en">
 <head>
